--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.62",
     "react-scripts": "4.0.2",
-    "server": "^1.0.37",
+    "serve": "^14.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "server -s build",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
