adding  github pages packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "face_detection_frontend",
+  "homepage": "https://vijaymeena2019.github.io/face_detection_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clarifai": "^2.9.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.62",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
